# nvml

./: CMakeLists.txt
doc/: glossary.md  libpmempool.3.md
libpmempool/: index.md
src/: CMakeLists.txt  PMDK.sln  pool.set
src/benchmarks/: my.cfg  ntmove.cfg  pmembench_rpmem_DD.cfg  pmembench_rpmem_RR.cfg  pmembench_rpmem_dd.cfg  pmembench_rpmem_dd_rand.cfg  pmembench_rpmem_dd_seq.cfg  pmembench_rpmem_rr.cfg  rpmem_dd.cfg.template  rpmem_dd_1024.cfg  rpmem_dd_1K.cfg  rpmem_dd_4096.cfg  rpmem_dd_4K.cfg  rpmem_dd_64.cfg  rpmem_dd_8.cfg  rpmem_dd_8192.cfg  rpmem_dd_8B.cfg  rpmem_dd_8KB.cfg  run_bench.sh
src/common/: CMakeLists.txt  device_dax_windows.c  file.c  mmap.c  mmap.h  pmem_provider.h  pmem_provider_dax.c  pmem_provider_file.c  pool_hdr.h  set.c  set.h  util.c
src/examples/librpmem/: foo.c  foo.sh
src/include/: libpmemlot.h  libpmempool.h
src/include/libpmemobj/: tx.h
src/libpmem/: CMakeLists.txt  pmem.c
src/libpmemblk/: CMakeLists.txt  blk.c
src/libpmemlog/: CMakeLists.txt  log.c
src/libpmemlot/: Makefile  fileh.h  libpmemlot.c  libpmemlot_main.c  part.h  part_file.h  pmemlot.h  poolset.h  replica.h
src/libpmemobj/: CMakeLists.txt  Makefile  obj.c  tx.c
src/libpmempool/: libpmempool.c  libpmempool.def  libpmempool.map  pool.c  replica.c  replica.h  sync.c  transform.c
src/librpmem/: rpmem.c  rpmem_fip.c  rpmem_obc.c
src/libvmem/: vmem.c
src/rpmem_common/: rpmem_common.c  rpmem_common.h  rpmem_fip_common.c  rpmem_fip_msg.h  rpmem_proto.h
src/test/: CMakeLists.txt  Makefile
src/test/compat_incompat_features/: compat_incompat_features.vcxproj  pool_open
src/test/libpmempool_sync/: .gitignore  TEST0  libpmempool_mod_check_test.c
src/test/libpmempool_transform/: .gitignore
src/test/obj_async_postcommit/: TEST0
src/test/obj_basic_integration/: TEST0  obj_basic_integration.c  out0.log.match  out1.log.match  out2.log.match  out3.log.match  out4.log.match
src/test/pmempool_info/: out0.log.match  out1.log.match  out10.log.match  out11.log.match  out12.log.match  out13.log.match  out14.log.match  out15.log.match  out16.log.match  out17.log.match  out2.log.match  out3.log.match  out4.log.match  out5.log.match  out5w.log.match  out6.log.match  out8.log.match
src/test/pmempool_sync/: out6.log.match  out7.log.match
src/test/pmempool_transform_remote/: common.sh
src/test/scope/: out6w.log.match
src/test/tools/: CMakeLists.txt
src/test/tools/ddmap/: ddmap  ddmap.c
src/test/tools/pmemwrite/: write.c
src/test/unittest/: unittest.ps1  unittest.sh
src/tools/: CMakeLists.txt
src/tools/pmempool/: Makefile  common.c  common.h  info.c  pmempool.c  synchronize.c  transform.c
src/tools/rpmemd/: rpmemd.c  rpmemd_config.c  rpmemd_config.h  rpmemd_fip.c  rpmemd_util.c
utils/docker/: build.sh  prepare-for-build.sh  pull-or-rebuild-image.sh
utils/docker/images/: Dockerfile.ubuntu-16.04
